--- a/ansible/ansible/03-api-db-roles/roles/api/templates/db.conf.j2
+++ b/ansible/ansible/03-api-db-roles/roles/api/templates/db.conf.j2
@@ -1,2 +1,2 @@
 [Service]
-Environment="DB_URL=postgresql+psycopg2://{{ db_user }}:{{ db_password }}@{{ db_host }}:{{ db_port }}/{{ db_name }}
+Environment="DB_URL=postgresql+psycopg2://{{ db_user }}:{{ db_password }}@{{ db_host }}:{{ db_port }}/{{ db_name }}"
